--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.24",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
